--- a/index.html
+++ b/index.html
@@ -1,1 +1,128 @@
-<h1>this is a project</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+  <div>
+    <h1>团队名称：GreenStep</h1>
+    <p>本项目旨在开发一款旨在追踪记录用户日常生活中碳足迹的移动
+      应用。该应用致力于解决用户在日常生活中难以追踪和管理水电资源消耗的问题。
+      通过允许用户手动输入简单的账单数据，应用能将抽象的消耗转化为直观的碳足
+      迹与成本图表，使其一目了然。同时，应用结合情景化提醒与轻量的游戏化机制
+      （如设定目标、解锁成就），为用户节约资源的行为提供即时正向反馈，让环保
+      行动变得有趣且富有成就感，最终实现个人节省开支与环境保护的双赢。</p>
+  </div>
+  <div class="team-introduction">
+    <h2>
+      1. 团队简介
+    </h2>
+    <h3>成员1</h3>
+    <ul>
+      <li>姓名：庞鑫</li>
+      <li>学号：202200130172</li>
+      <li>主要工作：网站建设</li>
+    </ul>
+    <h3>成员2</h3>
+    <ul>
+      <li>姓名：颜明霞</li>
+      <li>学号：202218130268</li>
+      <li>主要工作：访谈记录</li>
+    </ul>
+     <h3>成员3</h3>
+    <ul>
+      <li>姓名：汪琦楠</li>
+      <li>学号：202200130063</li>
+      <li>主要工作：问卷调研并记录</li>
+    </ul>
+  </div>
+  <div class="project-proposal">
+    <h2>2. 项目提案</h2>
+    <h3>2.1 问题背景</h3>
+    <p>家庭能耗是碳排放的重要来源，而节约水电本身就是环境可持续性的核心环节，同时浪费行为也直接加重了家庭的经济负担。
+      其重要性在于，如果能帮助个人清晰地了解其资源消耗模式，并引导其采取简单的节约行为，
+      将在宏观上显著促进能源节约与环境保护，在微观上为用户节省开支，从而实现环境与个人福祉的双赢。</p>
+    <h3>2.2 核心能力</h3>
+    <ul>
+      <li>极大地简化数据记录过程，用户只需每月手动输入一次电费水费账单金额，
+        应用便能通过计算将其转化为直观的可视化碳足迹和成本图表，让抽象的消耗变得一目了然。</li>
+      <li>借助手机的便携性和通知功能，应用可以成为完美的即时提醒工具，在用户可能产生浪费行为时推送情景化提示。</li>
+      <li>引入轻量的游戏化机制，如设置节能目标、解锁成就、与朋友进行友好的节能竞赛，从而为节约行为提供即时正向激励，
+        让环保行动变得有趣且富有成就感。</li>
+    </ul>
+    <h3>2.3 目标用户</h3>
+    <ul>
+      <li>（1）环保意识初醒者： 关心环境但不知从何做起的年轻人。</li>
+      <li>（2）精打细算的家庭： 希望减少家庭生活开支的用户。</li>
+      <li>（3）学生与合租群体： 对分摊水电费用敏感，并有兴趣进行内部节能竞赛的人群。</li>
+    </ul>
+    <h4>2.4 预期成果和影响</h4>
+    <ul>
+      <li>通过引导大量用户形成节能习惯，在宏观上减少不必要的能源消耗与碳排放，为环境可持续性做出贡献。</li>
+      <li>直接帮助用户降低水电费用开支。</li>
+      <li>深化用户对自身消费行为与环境之间联系的理解。</li>
+      <li>通过达成目标和获得成就，增强个人效能感与积极情绪；通过社区互动减少孤独感，提升社会福祉。</li>
+    </ul>
+  </div class="collect-data-plan">
+
+  <div>
+    <h2>3. 数据收集计划</h2>
+    <h3>3.1 访谈计划</h3>
+    <h4>3.1.1 访谈计划</h4>
+    <p>本次访谈旨在深入了解目标用户在家庭环境中的水电使用习惯、对节能的认知与态度，
+      以及对一款旨在促进节约资源的移动应用的功能期望与接受度，
+      为产品“GreenStep”的设计与开发提供关键的用户洞察和需求依据。</p>
+    <h4>3.1.2 访谈对象</h4>
+    <p>在校大学生或年轻上班族，拥有独立的居住空间（如宿舍、公寓），并直接或间接承担水电费用，对环保或个人开支管理有一定关注。</p>
+    <h4>3.1.3 访谈形式以及时间</h4>
+    <ul>
+      <li>形式： 一对一深度访谈（线上或线下）</li>
+      <li>时长： 约30分钟</li>
+    </ul>
+    <h4>3.1.4 访谈主题</h4>
+    <ul>
+      <li>主题一：当前行为与使用情境</li>
+      <li>主题二：认知与态度</li>
+      <li>主题三：技术接受度与产品期望</li>
+    </ul>
+    <h3>3.2 问卷计划</h3>
+    
+    <h4>3.2.1 调查背景</h4>
+    <p>随着家庭能耗在碳排放中的占比日益凸显，个人层面的资源管理对于环境可持续性变得至关重要。
+      为开发一款能够有效促进用户节约水电资源的移动应用（暂定名：EcoLife），我们特开展本次问卷调查。</p>
+    <h4>3.2.2 调查对象与样本</h4>
+    <ul>
+      <li>目标对象： 广大公众，特别是对家庭开支敏感或具有一定环保意识的年轻群体（如学生、上班族）。</li>
+      <li>样本量目标： 计划回收不少于10份有效问卷，以确保数据的初步代表性。</li>
+      <li>问卷时间：预计填写时间为5-7分钟。</li>
+    </ul>
+    <h4>3.2.3 问卷结构</h4>
+    <ul>
+      <li>第一部分：基本信息（第1-5题）</li>
+      <p>此部分旨在收集受访者的社会人口学信息，用于后续分析不同群体的行为差异。</p>
+      <li>第二部分：当前水电消耗行为与认知（第6-9题）</li>
+      <p>此部分旨在评估受访者现有的资源管理习惯和自我认知。</p>
+      <li>第二部分：当前水电消耗行为与认知（第6-9题）</li>
+      <p>此部分为核心，直接探询用户对于节能App的功能偏好和接受底线。</p>
+      <li>第四部分：核心需求挖掘（第15题）</li>
+      <p>此部分为开放式问题，旨在收集受访者最深层、最个性化的需求。</p>
+    </ul>
+    <h4>3.2.3 问卷发放以及实施计划</h4>
+    <ul>
+      <li>问卷平台： 将使用专业的在线问卷工具（如问卷星、腾讯问卷）进行编制和发放。</li>
+      <li>发放渠道：
+        <ul>
+          <li>社交媒体： 在项目团队成员的朋友圈、微博、相关主题的微信群和社区进行扩散。</li>
+          <li>目标社群： 有针对性地在学生论坛、职场社群、环保兴趣小组中发布问卷链接。</li>
+        </ul>
+      </li>
+      <li>实施周期： 计划问卷发放周期为1周。</li>
+    </ul>
+  </div>
+</body>
+
+</html>
