--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
     </ul>
      <h3>成员3</h3>
     <ul>
-      <li>姓名：汪琦楠</li>
+      <li>姓名：汪绮楠</li>
       <li>学号：202200130063</li>
       <li>主要工作：问卷调研并记录</li>
     </ul>
