--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     
     <h3>3.2 问卷计划</h3>
     <h4>3.2.1 调查背景</h4>
-    <p>随着家庭能耗在碳排放中的占比日益凸显，个人层面的资源管理对于环境可持续性变得至关重要。为开发一款能够有效促进用户节约水电资源的移动应用（暂定名：EcoLife），我们特开展本次问卷调查。</p>
+    <p>随着家庭能耗在碳排放中的占比日益凸显，个人层面的资源管理对于环境可持续性变得至关重要。为开发一款能够有效促进用户节约水电资源的移动应用（暂定名：GreenStep），我们特开展本次问卷调查。</p>
     
     <h4>3.2.2 调查对象与样本</h4>
     <ul>
