--- a/index.html
+++ b/index.html
@@ -354,7 +354,11 @@
       <li>实施周期：计划问卷发放周期为1周。</li>
     </ul>
   </div>
-  
+  <p>请点击查看相关文件：</p>
+  <ul>
+      <li><a href="访谈记录.pdf" target="_blank">查看项目分析报告 (PDF)</a></li>
+      <li><a href="问卷调查统计.xlsx">下载原始数据 (XLSX)</a></li>
+  </ul>
   <footer>
     <p>GreenStep团队 &copy; sdu - 致力于环保与可持续发展的创新解决方案</p>
   </footer>
